FIX revenue sharing to be based on recursive data

--- a/src/app/pages/user-profile/profile-sections/provider-revenue-sharing/provider-revenue-sharing.component.html
+++ b/src/app/pages/user-profile/profile-sections/provider-revenue-sharing/provider-revenue-sharing.component.html
@@ -10,108 +10,13 @@
     </div>
 } @else {        
         
-        @if(subscription){
-            <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-4 md:p-8">
-
-                <h3 class="md:text-xl lg:text-2xl font-bold text-primary-100 dark:text-white mb-4">My Subscription Plan</h3>
-                
-                <div class="text-lg font-normal text-gray-500 dark:text-gray-400">
-                    <p>
-                        {{ subscription?.text }}
-                    </p>
-                </div>
-    
-            </div>
-        }
-
-        @if(billing){
-        <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-4 md:p-8 mt-4">
-
-            <h3 class="md:text-xl lg:text-2xl font-bold text-primary-100 dark:text-white mb-4">Billing History</h3>
-            
-            <div class="text-lg font-normal text-gray-500 dark:text-gray-400">
-                @for(child of billing?.items; track child){
-                    <div class="mt-4">
-                        <b>{{ child?.label }}</b>: 
-                        @for(state of child?.items; track state){
-                            <div class="ml-4">
-                              <span>
-                                {{state?.label}}:
-                                @if(state?.link != null){
-                                  <a href="{{state?.link}}" target="_blank" class="cursor-pointer font-medium text-primary-100 dark:text-primary-50 hover:underline break-words">
-                                    {{state?.text}}
-                                  </a>
-                                } @else {
-                                  {{state?.text}}
-                                }
-                              </span>
-                            </div>
-                          }
-                          
-                    </div>
-                }
-            </div>
-
+    @for (section of report; track section) {
+        <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-4 md:p-8 mb-4">           
+      
+            <app-revenue-report [node]="section"></app-revenue-report>
         </div>
-        }
-
-        @if(revenue){
-            <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-4 md:p-8 mt-4">
-                <h3 class="md:text-xl lg:text-2xl font-bold text-primary-100 dark:text-white mb-4">Revenue Volume Monitoring</h3>
-                <div class="text-lg font-normal text-gray-500 dark:text-gray-400">
-                    @for(child of revenue?.items; track child){
-                        <div class="mt-4">
-                            <b>{{ child?.label }}</b>: {{child?.text}}
-                        </div>
-                    }
-                </div>
-            </div>
-        }
-
-        @if(revenueSummary){
-            <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-4 md:p-8 mt-4">
-                <h3 class="md:text-xl lg:text-2xl font-bold text-primary-100 dark:text-white mb-4">Revenue Summary</h3>
-                <div class="text-lg font-normal text-gray-500 dark:text-gray-400">
-                    <p>
-                        {{ revenueSummary?.text }}
-                    </p>
-                </div>
-            </div>
-        }
-
-
-        @if(referral){
-            <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-4 md:p-8 mt-4">
-                <h3 class="md:text-xl lg:text-2xl font-bold text-primary-100 dark:text-white mb-4">Referral Program Area</h3>
-                <div class="text-lg font-normal text-gray-500 dark:text-gray-400">
-                    @for(child of referral?.items; track child){
-                        <div class="mt-4">
-                            <b>{{ child?.label }}</b>: {{child?.text}}
-                        </div>
-                    }
-                </div>
-            </div>
-        }
-
-        @if(support){
-            <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-4 md:p-8 mt-4">
-                <h3 class="md:text-xl lg:text-2xl font-bold text-primary-100 dark:text-white mb-4">Support Contact</h3>
-                <div class="text-lg font-normal text-gray-500 dark:text-gray-400">
-                    @for(child of support?.items; track child){
-                        <div class="mt-4">
-                            <b>{{ child?.label }}</b>:                                
-                            @if(child?.link != null){
-                                <a href="{{child?.link}}" target="_blank" class="cursor-pointer font-medium text-primary-100 dark:text-primary-50 hover:underline break-words">
-                                  {{child?.text}}
-                                </a>
-                              } @else {
-                                {{child?.text}}
-                              }
-                        </div>
-                    }
-                </div>
-            </div>
-        }
+      }
+      
         
 }
 </div>
