--- a/src/app/shared/revenue-report/revenue-report.component.html
+++ b/src/app/shared/revenue-report/revenue-report.component.html
@@ -1,4 +1,4 @@
-<div class="mt-4 text-lg font-normal text-gray-500 dark:text-gray-400">
+<div class="text-lg font-normal text-gray-500 dark:text-gray-400">
     <h3 class="text-xl font-bold text-primary-100 dark:text-white">{{ node.label }}:</h3>
   
     <div class="ml-4 mt-1">
