--- a/src/app/pages/seller-offerings/offerings/seller-catalogs/create-catalog/create-catalog.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-catalogs/create-catalog/create-catalog.component.html
@@ -26,36 +26,29 @@
   <!-- End Breadcrumb -->
 
   <div class="bg-secondary-50 dark:bg-secondary-100 border border-secondary-50 dark:border-gray-800 mt-4 p-8 rounded-lg">
-    <h2 class="text-3xl font-bold text-primary-100 dark:text-white ml-4">{{ 'CREATE_CATALOG._new' | translate }}</h2>
-    <hr class="h-px m-4 bg-gray-300 dark:bg-gray-200 border-0">
-    <div class="md:grid md:grid-cols-25/75 xl:grid-cols-20/80">
-        <div class="flex sm:flex-row md:flex-col md:mr-4 overflow-x-auto max-w-[calc(100vw-5rem)]">
-            <h2 class="text-xl hidden md:block font-bold text-black mb-4 dark:text-white">{{ 'CREATE_CATALOG._steps' | translate }}</h2>
-            <button id="general-info" (click)="toggleGeneral()" [disabled]="!generalDone"
-            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-primary-100 dark:text-primary-50 justify-items-center md:justify-items-start">
-                <span id="general-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-primary-100 dark:border-primary-50 rounded-full shrink-0">
-                    1
-                </span>
-                <span>
-                    <h3 class="flex sm:text-center md:text-start">{{ 'UPDATE_CATALOG._general' | translate }}</h3>
-                    <p class="hidden xl:flex text-xs sm:text-center md:text-start">{{ 'UPDATE_CATALOG._general_info' | translate }}</p>
-                </span>
-            </button>
-            <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
-            <button id="summary" [disabled]="!finishDone || generalForm.invalid" (click)="showFinish()"
-            class="grid sm:grid-rows-2 md:grid-rows-1 md:grid-cols-25/75 xl:grid-cols-20/80 mb-2 mr-2 md:mr-0 text-gray-500 justify-items-center md:justify-items-start">
-                <span id="summary-circle" class="flex items-center justify-center w-6 h-6 md:w-8 md:h-8 border border-2 border-gray-400 rounded-full shrink-0">
-                    2
-                </span>
-                <span>
-                    <h3 class="flex justify-start">{{ 'UPDATE_CATALOG._finish' | translate }}</h3>
-                    <p class="hidden xl:flex text-xs justify-start text-start">{{ 'UPDATE_CATALOG._summary' | translate }}</p>
-                </span>
-            </button>
-        </div>
+    <h2 class="text-3xl font-bold text-primary-100 dark:text-white ml-4 pb-4">{{ 'CREATE_CATALOG._new' | translate }}</h2>
+    <ol class="flex items-start w-full text-sm font-medium text-center text-gray-500 dark:text-gray-400">
+        @for (step of steps; track i; let i = $index) {
+          <li 
+              (click)="handleStepClick(i)"
+              [class.cursor-not-allowed]="!canNavigate(i)"
+              [class.opacity-50]="!canNavigate(i)"          
+              [class.text-primary-100]="currentStep === i"
+              class="flex-1 cursor-pointer">
+            <span class="flex items-center justify-center w-8 h-8 md:w-10 md:h-10 mx-auto border-2 border-primary-100 dark:border-primary-50 shrink-0 rounded-full"
+                  [class.bg-primary-100]="currentStep === i"
+                  [class.text-white]="currentStep === i">
+              {{ i + 1 }}
+            </span>
+            <span class="md:block mt-2 hidden">{{ step }}</span>
+          </li>
+        }
+      </ol>
+  
+      <h3 class="block md:hidden mt-2 text-center text-2xl text-primary-100 dark:text-white pb-4">{{ this.steps[currentStep] }}</h3>
+    <div class="md:p-8">
         <div>
-            @if(showGeneral){
-                <h2 class="text-3xl font-bold text-primary-100 dark:text-white ml-4">{{ 'CREATE_CATALOG._general' | translate }}</h2>
+            @if (currentStep === 0) {
                     <form class="m-4 gap-4" [formGroup]="generalForm">
                         <label for="prod-name" class="font-bold text-lg dark:text-white">{{ 'CREATE_CATALOG._name' | translate }}</label>
                         <input data-cy="catalogName" formControlName="name" type="text" id="prod-name" maxLength="100"
@@ -68,17 +61,14 @@
 
                     </form>
                     <div class="flex w-full justify-items-end justify-end">
-                        <button data-cy="catalogNext" type="button" (click)="showFinish();generalDone=true;" [disabled]="!generalForm.valid" [ngClass]="!generalForm.valid ? 'opacity-50' : 'hover:bg-primary-50'" class="flex text-white justify-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
+                        <button data-cy="catalogNext" type="button" (click)="goToStep(currentStep + 1)" [disabled]="!generalForm.valid" [ngClass]="!generalForm.valid ? 'opacity-50' : 'hover:bg-primary-50'" class="flex text-white justify-end bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
                             {{ 'CREATE_CATALOG._next' | translate }}
                             <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                             </svg>
                         </button>
                     </div>
-            }
-            
-            @if(showSummary){
-                <h2 class="text-3xl font-bold text-primary-100 ml-4 dark:text-white">{{ 'CREATE_CATALOG._finish' | translate }}</h2>
+            } @else if (currentStep === 1) {
                 <div class="m-8">
                     @if(loading){
                         <div role="status" class="w-full h-full flex justify-center align-middle">
