Implement Tenders feature with routing, module, and component setup
- Added a new route for 'tenders' in the app-routing module.
- Created TendersModule to encapsulate tender-related components and routes.
- Introduced TendersRoutes for managing tender navigation.
- Developed TenderListComponent for displaying and managing tenders.
- Added role constants for API and UI roles to facilitate role-based access.
- Established Tender model to represent tender data structure.
- Implemented CreateTenderModalComponent for creating and managing tender submissions.
- Updated header component to include navigation to the new Tenders section.

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -180,6 +180,9 @@
               <li>
                 <button id="quotelist" (click)="goTo('/quote-list')" class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"><fa-icon [icon]="faReceipt" class="mr-2"></fa-icon>Quotes</button>
               </li>
+              <li>
+                <button id="tenderlist" (click)="goTo('/tenders')" class="flex w-full justify-left px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"><fa-icon [icon]="faReceipt" class="mr-2"></fa-icon>Tenders</button>
+              </li>
             }
             <li>
               <a
