--- a/src/app/pages/seller-offerings/offerings/seller-catalogs/update-catalog/update-catalog.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-catalogs/update-catalog/update-catalog.component.html
@@ -220,7 +220,7 @@
                 {{ 'CREATE_OFFER._previous' | translate }}
             </button>
     
-            <button (click)="goToStep(currentStep + 1)"
+            <button data-cy=catalogNext (click)="goToStep(currentStep + 1)"
                     [disabled]="currentStep === steps.length - 1 || !canNavigate(currentStep) || !generalForm.valid"
                     [ngClass]="{
                     'hover:bg-gray-100 hover:text-gray-700 dark:hover:bg-gray-700 dark:hover:text-white': currentStep !== steps.length - 1 && (validateCurrentStep() || canNavigate(currentStep)),
