--- a/src/app/pages/seller-offerings/offerings/seller-catalogs/create-catalog/create-catalog.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-catalogs/create-catalog/create-catalog.component.html
@@ -142,7 +142,7 @@
                     {{ 'CREATE_OFFER._previous' | translate }}
                 </button>
         
-                <button data-cy=catalogNext (click)="goToStep(currentStep + 1)"
+                <button data-cy="catalogNext" (click)="goToStep(currentStep + 1)"
                         [disabled]="currentStep === steps.length - 1 || !validateCurrentStep() || !canNavigate(currentStep) || !generalForm.valid"
                         [ngClass]="{
                         'hover:bg-gray-100 hover:text-gray-700 dark:hover:bg-gray-700 dark:hover:text-white': currentStep !== steps.length - 1 && (validateCurrentStep() || canNavigate(currentStep)),
@@ -157,7 +157,7 @@
                 </svg>
                 </button>
                 @if(currentStep === 1){
-                <button data-cy=catalogFinish (click)="createCatalog()"
+                <button data-cy="catalogFinish" (click)="createCatalog()"
                 [disabled]="!generalForm.valid || loading"
                 [ngClass]="loading || !generalForm.valid ? 'opacity-50' : 'hover:bg-primary-50'"
         
