--- a/src/app/shared/forms/offer/price-plans/price-component-drawer/price-component-drawer.component.html
+++ b/src/app/shared/forms/offer/price-plans/price-component-drawer/price-component-drawer.component.html
@@ -106,7 +106,7 @@
         </div>
       </div>
       <div class="flex flex-row">
-        <select id="type" (change)="changePriceComponentChar($event)"
+        <select data-cy="selectPriceSpecChar" id="type" (change)="changePriceComponentChar($event)"
           class="mb-2 mr-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-gray-100 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
             @if(!selectedCharacteristic){
               <option value="">Select a characteristic</option>
@@ -121,20 +121,48 @@
                 }
               }
             }
-          </select>
-          @if(showValueSelect){
-              <select id="type" (change)="changePriceComponentCharValue($event)"
-              class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-gray-100 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"> 
-                  @for(val of selectedCharacteristic.productSpecCharacteristicValue; track val){
-                      @if(hasKey(val, 'unitOfMeasure')){
-                          <option value="{{val.value}}">{{val.value}} ({{val.unitOfMeasure}})</option>
-                      } @else {
-                          <option value="{{val.value}}">{{val.value}}</option>
-                      }
-                  }
-              </select>
-          }
+        </select>
+        @if(showValueSelect){
+            <select id="type" (change)="changePriceComponentCharValue($event)"
+            class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-gray-100 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                @for(val of selectedCharacteristic.productSpecCharacteristicValue; track val){
+                    @if(hasKey(val, 'unitOfMeasure')){
+                        <option value="{{val.value}}">{{val.value}} ({{val.unitOfMeasure}})</option>
+                    } @else {
+                        <option value="{{val.value}}">{{val.value}}</option>
+                    }
+                }
+            </select>
+        }
       </div>
+
+      @if(selectedCharacteristic && selectedCharacteristic.productSpecCharacteristicValue?.[0] &&
+          hasKey(selectedCharacteristic.productSpecCharacteristicValue[0], 'valueFrom') &&
+          hasKey(selectedCharacteristic.productSpecCharacteristicValue[0], 'valueTo')){
+        <div class="bg-blue-50 dark:bg-gray-900 p-3 rounded border border-blue-200 dark:border-blue-800 mb-4">
+          <label class="block text-xs font-medium text-gray-700 dark:text-gray-300 mb-2">
+            Selected Range: [{{ selectedCharacteristic.productSpecCharacteristicValue[0].valueFrom }},{{ selectedCharacteristic.productSpecCharacteristicValue[0].valueTo }}]. 
+            Not modifiable, in case you want Tiering range prices go to price plan modal and click on Tier Pricing button
+          </label>
+          <div class="relative w-full h-12 bg-gray-200 dark:bg-gray-700 rounded px-4">
+            <div class="absolute top-1/2 left-4 right-4 h-2 bg-blue-500 dark:bg-blue-400 rounded transform -translate-y-1/2"></div>
+
+            <div class="absolute top-1/2 left-4 transform -translate-y-1/2 -translate-x-1/2">
+              <div class="w-3 h-3 bg-blue-600 dark:bg-blue-500 rounded-full border-2 border-white"></div>
+              <span class="absolute top-5 left-1/2 transform -translate-x-1/2 text-xs font-semibold text-blue-700 dark:text-blue-300 whitespace-nowrap">
+                {{ selectedCharacteristic.productSpecCharacteristicValue[0].valueFrom }}
+              </span>
+            </div>
+
+            <div class="absolute top-1/2 right-4 transform -translate-y-1/2 translate-x-1/2">
+              <div class="w-3 h-3 bg-blue-600 dark:bg-blue-500 rounded-full border-2 border-white"></div>
+              <span class="absolute top-5 left-1/2 transform -translate-x-1/2 text-xs font-semibold text-blue-700 dark:text-blue-300 whitespace-nowrap">
+                {{ selectedCharacteristic.productSpecCharacteristicValue[0].valueTo }}
+              </span>
+            </div>
+          </div>
+        </div>
+      }
       }
 
       <!-- Tipo de Precio -->
