--- a/src/app/shared/forms/offer/price-plans/tier-pricing-drawer/tier-pricing-drawer.component.html
+++ b/src/app/shared/forms/offer/price-plans/tier-pricing-drawer/tier-pricing-drawer.component.html
@@ -78,7 +78,7 @@
 
             <!-- User markers -->
             <div
-              *ngFor="let marker of sliderMarkers; let i = index"
+              *ngFor="let marker of sliderMarkers; let i = index; trackBy: trackByIndex"
               class="absolute top-1/2 transform -translate-y-1/2"
               [style.left.%]="((marker - rangeMin) / (rangeMax - rangeMin)) * 100"
             >
@@ -108,7 +108,7 @@
               Adjust Markers ({{ sliderMarkers.length }})
             </label>
             <div class="grid grid-cols-2 gap-2">
-              <div *ngFor="let marker of sliderMarkers; let i = index" class="flex items-center space-x-2">
+              <div *ngFor="let marker of sliderMarkers; let i = index; trackBy: trackByIndex" class="flex items-center space-x-2">
                 <span class="text-sm text-gray-600 dark:text-gray-400">Marker {{ i + 1 }}:</span>
                 <input
                   type="number"
@@ -139,7 +139,7 @@
             </label>
             <div class="space-y-3">
               <div
-                *ngFor="let subRange of subRanges; let i = index"
+                *ngFor="let subRange of subRanges; let i = index; trackBy: trackBySubRangeId"
                 class="bg-white dark:bg-gray-700 border rounded overflow-hidden"
                 [ngClass]="subRange.priceComponent ? 'border-green-500 dark:border-green-600' : 'border-gray-300 dark:border-gray-600'"
               >
