Removing of the header and the footer from dashboard

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,4 @@
  <div class="page">
-  <app-dashboard-header />
 
   <section class="hero">
     <div class="hero-inner">
@@ -325,5 +324,7 @@
     </div>
   </section>
 
-  <app-dashboard-footer />
+<app-europe-trademark></app-europe-trademark>
+
+
 </div>
