Added product id in acbr details (#184)
* Added product id in acbr details

* link added

---------

Co-authored-by: SHENGXING LU <slu@SHENGXINGs-MacBook-Air.local>

--- a/src/app/pages/product-orders/sections/invoices-info/invoices-info.component.html
+++ b/src/app/pages/product-orders/sections/invoices-info/invoices-info.component.html
@@ -225,6 +225,17 @@
                         </p>
                       </div>
 
+                      <div class="flex flex-row gap-2">
+                        <p class="text-sm font-bold text-gray-700 dark:text-white">
+                          {{ 'INVOICES._product_acbr_ref' | translate }}:
+                        </p>
+                        <p class="text-sm text-blue-100 dark:text-blue-200 font-mono">
+                          <u><a href="/product-inventory/{{acbr.product?.href}}">
+                            {{acbr.product?.href}}
+                          </a></u>
+                        </p>
+                      </div>
+
                       @if (acbr.periodCoverage) {
                         <div class="flex flex-row gap-2">
                           <p class="text-sm font-bold text-gray-700 dark:text-white">
