--- a/src/app/shared/forms/offer/price-plans/price-component-drawer/price-component-drawer.component.html
+++ b/src/app/shared/forms/offer/price-plans/price-component-drawer/price-component-drawer.component.html
@@ -123,7 +123,7 @@
             }
         </select>
         @if(showValueSelect){
-            <select id="type" (change)="changePriceComponentCharValue($event)"
+            <select data-cy="selectPriceSpecCharValue" id="type" (change)="changePriceComponentCharValue($event)"
             class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-gray-100 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                 @for(val of selectedCharacteristic.productSpecCharacteristicValue; track val){
                     @if(hasKey(val, 'unitOfMeasure')){
